[package]
name = "rusty-markov"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

[features]
default = ["memory-profiling"]
memory-profiling = ["memuse"]

[dependencies.memuse]
version = "0.1"
optional = true

[profile.release]
# Disable memory profiling for release builds
features = []
